# octree-lib

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  VOXEL_BENCHMARKS.md  build.bat  build.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_memory.cpp  benchmark_octree.cpp  benchmark_voxel.cpp
cmake/: octree-config.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  custom_data.cpp  frustum_culling.cpp  raycast_example.cpp  spatial_queries.cpp  voxel_pathfinding.cpp
include/octree/: octree.hpp
tests/: CMakeLists.txt  test_aabb.cpp  test_octree.cpp  test_point.cpp  test_raycast.cpp
